# Augur

./: .gitignore  README.md  SPEC.md  action.yml  aggregate_cmd.go  gate_cmd.go  go.mod  knobs.go  main.go  pricing.yaml  pricing_source.go  project_cmd.go  proxy_cmd.go  run_cmd.go  tco_cmd.go
.github/workflows/: ci.yml
aggregate/: aggregate.go  aggregate_test.go  stats.go  stats_test.go  table.go
cassette/: cassette.go  cassette_test.go
cost/: cost.go  cost_test.go  pricing.go  pricing_test.go
examples/: budget.yaml  github-workflow.yml  scenarios.yaml  tco.yaml  traffic.yaml
examples/cloudoracle/: README.md  augur_dogfood.py  budget.yaml  pricing-gemini.yaml  scenarios.yaml  traffic.yaml
gate/: budget.go  budget_test.go  report.go
project/: project.go  project_test.go  table.go  traffic.go  traffic_test.go
proxy/: proxy.go  proxy_stream.go  proxy_stream_test.go  proxy_test.go  record_test.go
runner/: config.go  config_test.go  integration_test.go  runner.go  runner_test.go
sidecar/: README.md  pyproject.toml
sidecar/augur_predict/: __init__.py  __main__.py  cli.py  emit.py  model.py  trace.py
sidecar/tests/: conftest.py  test_cli.py  test_emit.py  test_model.py  test_quantile.py  test_trace.py
tco/: table.go  tco.go  tco_test.go
trace/: trace.go  trace_test.go
